--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .DS_Store
 node_modules/
+public/
 /dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-backend/
+
 # Editor directories and files
 .idea
 .vscode
