--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,26 +1,26 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "username": "aivocado",
+    "password": "dlznwh4!",
+    "database": "aivocado",
+    "host": "aivocado.cimkkgviiry1.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "timezone": "+09:00"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "aivocado",
+    "password": "dlznwh4!",
+    "database": "aivocado",
+    "host": "aivocado.cimkkgviiry1.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "timezone": "+09:00"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "aivocado",
+    "password": "dlznwh4!",
+    "database": "aivocado",
+    "host": "aivocado.cimkkgviiry1.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "timezone": "+09:00"
   }
 }
