--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@coreui/icons": "^0.3.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "async": "^3.1.0",
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
