--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "async": "^3.1.0",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.25",
+    "jquery": "^3.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -32,6 +33,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
